--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ niversity of Washington Tacaom </a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-google-scholar"><span class="label">Google Scholar</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon brands fa-email"><span class="label">Email</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://www.linkedin.com/in/sikhapentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://scholar.google.com/citations?user=BcbKxy8AAAAJ&hl=nl&oi=ao" class="icon brands fa-google-scholar"><span class="label">Google Scholar</span></a></li>
+										<li><a href="https://github.com/sikhapentyala/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-email"><span class="label">Email</span></a></li> -->
+										<!--  <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 									</ul>
 								</header>
 
@@ -164,7 +164,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Sikha Pentyala</a></li>
+										<li><a href="index.html">About Me</a></li>
 										<li><a href="generic.html">Publications</a></li>
 										<li><a href="elements.html">CV</a></li>
 										<!-- <li>
