--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a>
+									<!-- <a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a> -->
+									<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+									<strong>Sikha Pentyala</strong> 
+									CSS PhD Student @ University of Washington Tacoma
+									<strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning
+
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/sikhapentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://scholar.google.com/citations?user=BcbKxy8AAAAJ&hl=nl&oi=ao" class="icon brands fa-google-scholar"><span class="label">Google Scholar</span></a></li>
@@ -42,7 +47,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
                                                 <p>Current </p>
                                                 <p>Research Interests </p>
@@ -61,7 +66,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 											<header class="major">
 												<h3>Papers in Proceedings</h3>
