--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 								<header id="header">
 									<!-- <a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a> -->
 									<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-									<strong>Sikha Pentyala</strong> 
-									CSS PhD Student @ University of Washington Tacoma
-									<strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning
+									<p><strong>Sikha Pentyala</strong></p> 
+									<p>CSS PhD Student @ University of Washington Tacoma </p>
+									<p><strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p>
 
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/sikhapentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
