--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Header -->
-								<header id="header">
+								<header id="header" class="logo">>
 									<!-- <a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a> -->
 									<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
 									<p><strong>Sikha Pentyala</strong></p> 
