--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 										</th> 
 																					
 									</table>	
-									<a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a>
+									<!-- <a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a>
 									<p><strong>Sikha Pentyala</strong></p> 
 									<p>CSS PhD Student @ University of Washington Tacoma </p>
-									<p><strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p>
+									<p><strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p> -->
 
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/sikhapentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
