--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 									<!-- <a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a> -->
 									<table>
 										 
-										<th><a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a></th> 
-										<th>
+										<td rowspan=3><a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a></td> 
+										<td>
 											<tr><strong>Sikha Pentyala</strong></tr>
 											<tr>CSS PhD Student @ University of Washington Tacoma </tr>
 											<tr><strong>Research Interets:</strong> Trustworthy ML - Privacy Preserving and Fairness in machine learning</tr>
-										</th> 
+										</td> 
 																					
 									</table>	
 									<!-- <a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a>
