--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 									<ul>
 										<li><a href="#about">About Me</a></li>
 										<li><a href="#publications">Publications</a></li>
-										<li><iframe src="docs/Sikha-CV.pdf" width="100%" height="500px">CV<li>
+										<!-- <li><iframe src="docs/Sikha-CV.pdf" width="100%" height="500px">CV<li> -->
     </iframe>
-										<li><a href="elements.html">CV</a></li>
+										<li><a href="cv.html">CV</a></li>
 
 									</ul>
 								</nav>
