--- a/cv.html
+++ b/cv.html
@@ -13,5 +13,6 @@
 	</head>
 	<body class="is-preload">
         <iframe src="docs/Sikha-CV.pdf" width="100%" height="100%">
+		</iframe>
   </body>
     </html>
