--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-        <iframe src="docs/Sikha-CV.pdf" width="100%" height="100%">
+        <iframe src="docs/Sikha-CV.pdf"> <!-- width="100%" height="100%"> -->
 		</iframe>
   </body>
     </html>
