--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 						<div class="inner">
 
 							<!-- Header -->
-								<header id="header" class="logo">
+								<header id="header" class="major">
 									<!-- <a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a> -->
-									<!-- <table>
+									<table>
 										 
 										<td rowspan=3><a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a></td> 
 										<td>
@@ -32,11 +32,11 @@
 											<tr><strong>Research Interets:</strong> Trustworthy ML - Privacy Preserving and Fairness in machine learning</tr>
 										</td> 
 																					
-									</table>	-->
-									<a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a>
+									</table>	
+									<!-- <a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a>
 									<p><strong>Sikha Pentyala</strong></p> 
 									<p>CSS PhD Student @ University of Washington Tacoma </p>
-									<p><strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p> 
+									<p><strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p> -->
 
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/sikhapentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
