--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 									 <a href="#" class="image"><img src="images/sikha.JPG" alt="" /></a>
 									<p><strong>Sikha Pentyala</strong> <br>
 									CSS PhD Student @ University of Washington Tacoma <br>
-									<strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p? 
+									<strong>Research Interets:</strong> Trustworthy AI - Privacy Preserving and Fairness in machine learning</p>
 
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/sikhapentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
