--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 												<h3>Awards</h3>
 											</header>
 											<ul>
-												<li>2021-2022 School of Engineering & Technology’s Outstanding Graduate Research Award, Univeristy of Washington Tacoma</li>
-	<li>Winner of Track III of the iDASH2021 secure genome analysis competition</li>
-	<li>Gold Medalist at Jawaharlal Nehru Technological University, Anantapur in the Branch of ECM, Class of 2009</li>
+												<li>2021-2022 School of Engineering & Technology’s Outstanding Graduate Research Award, Univeristy of Washington Tacoma. (<a href="docs/OSRAward.png">CERT</a>)</li>
+	<li>Winner of Track III of the iDASH2021 secure genome analysis competition. (<a href="http://www.humangenomeprivacy.org/2021/">HTML</a>) </li>
+	<li>Gold Medalist at Jawaharlal Nehru Technological University, Anantapur in the Branch of ECM, Class of 2009. (<a href="docs/GOLDMEDALCERT.pdf">CERT</a>)</li>
 
 											</ul>
 									</div>
@@ -133,7 +133,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
-	<li><strong>May 2022</strong> : Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</li>
+	<li><strong>May 2022</strong> : <a href="https://www.tacoma.uw.edu/set/awards">Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</a></li>
 												
 
 											</ul>
