--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Header -->
-								<header id="header" class="logo">
+								<header id="header" class="main">
 									<!-- <a href="index.html" class="logo"><strong>Sikha Pentyala</strong> CSS PhD Student @ University of Washington Tacoma </a> -->
 									<!--<table>
 										 
