--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 												
 
 											</ul>
-												
+									<header class="major">
 												<h3>Abstracts & Extended Abstracts</h3>
 											</header>
 											<ul>
