--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 												<h3>Abstracts & Extended Abstracts</h3>
 											</header>
 											<ul>
-												<li><strong>S. Pentyala</strong>, Nicola Neophytou, Anderson Nascimento, Martine De Cock, Golnoosh Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em>, Montreal AI Symposium 2022</li>
+												<li><strong>S. Pentyala</strong>, Nicola Neophytou, Anderson Nascimento, Martine De Cock, Golnoosh Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em>, Montreal AI Symposium 2022 <a href="docs/mais.pdf">Poster</a> </li>
+                                                                                                <li><strong>S. Pentyala</strong>, Nicola Neophytou, Anderson Nascimento, Martine De Cock, Golnoosh Farnadi <em>Towards Private and Fair Federated Learning </em>, Women in Machine Learning (WiML) workshop at NeurIPS2022</li>
 
 												
 
