--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<article>
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
-                                                <p>I am a second year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a>.</p>
+                                                <p>I am a thrid year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a>.</p>
                                                 <p>I am broadly interested in Trustworthy Machine Learning. Currently, my research focuses on privacy-preserving machine learning and fairness in machine learning.</p>
                                                 <p>I earned my Masters in Computer Science & Systems from University of Washington Tacoma in 2020 with a thesis on privacy-preserving video classification that was nominated for the UW Distinguished Thesis award. I then briefly worked as a Research Intern at <a href="https://mila.quebec/en/">MILA</a> under the supervision of <a href="https://gfarnadi.github.io/">Dr. Golnoosh Farnadi.</a> 
 						Prior to starting at UW Tacoma, I spent a few years in the Nuclear Power Generation industry as an IT administrator after receiving my Bachelors from <a href="https://www.jntua.ac.in/">JawaharLal Nehru Technological University Anantapur</a> in 2009. </p>
@@ -135,6 +135,8 @@
 												<h3>Awards</h3>
 											</header>
 											<ul>
+												<li>WiML travel award to present work on <a href="https://arxiv.org/abs/2205.11584">private and fair federated learning</a> at WiML@NeurIPS 2022</li>
+												<li>Carwein-Andrews Endowment award for 2022-2023</li>
 												<li>2021-2022 School of Engineering & Technology’s Outstanding Graduate Research Award, Univeristy of Washington Tacoma. (<a href="docs/OSRAward.png">CERT</a>)</li>
 	<li>Winner of Track III of the iDASH2021 secure genome analysis competition. (<a href="http://www.humangenomeprivacy.org/2021/">HTML</a>) </li>
 	<li>Gold Medalist at Jawaharlal Nehru Technological University, Anantapur in the Branch of ECM, Class of 2009. (<a href="docs/GOLDMEDALCERT.pdf">CERT</a>)</li>
@@ -157,6 +159,8 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li><strong>Sep 2022</strong> : Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</a></li>
+	<li><strong>Sep 2022</strong> : Recipient of WiML travel funding award</a></li>
 	<li><strong>May 2022</strong> : <a href="https://www.tacoma.uw.edu/set/awards">Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</a></li>
 												
 
