--- a/index.html
+++ b/index.html
@@ -110,13 +110,15 @@
 											<ul>
 												<li><strong>S. Pentyala</strong>, D. Melanson, M. De Cock, G. Farnadi <em>PrivFair: a Library for Privacy-Preserving Fairness Auditing</em>, AAAI-22 Workshop on Privacy-Preserving Artificial Intelligence, 2022. (<a href="https://arxiv.org/abs/2202.04058">arXiv</a>, <a href="https://aaai-ppai22.github.io/files/24.pdf">PDF</a>, <a href="https://web.ecs.syr.edu/~ffiorett/cfp/PPAI22/24.mp4">Talk</a>)</li>
 												<li><strong>S. Pentyala</strong>, M. De Cock and R. Dowsley <em>Privacy-Preserving Video Classification</em>, Women in Computer Vision Workshop at CVPR, 2021. (<a href="docs/WicCV21_13-poster.pdf">Poster</a>)</li>
+												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em> , Algorithmic Fairness through the Lens of Causality and Privacy Workshop, NeurIPS, 2022. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
+												<li>M. Pereira, <strong>S. Pentyala</strong>, A. Nascimento, R. T. de Sousa Jr., M. De Cock <em>Secure Multiparty Computation for Synthetic Data Generation from Distributed Data</em> , SyntheticData4ML Workshop, NeurIPS, 2022. (<a href="https://arxiv.org/abs/2210.07332">arXiv</a>)</li>
 
 											</ul>
 									<header class="major">
 												<h3>Papers on Arxiv</h3>
 											</header>
 											<ul>
-												<li><strong>S. Pentyala</strong>, Nicola Neophytou, Anderson Nascimento, Martine De Cock, Golnoosh Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em> (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
+												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em> (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
 												<li><strong>S. Pentyala</strong>, D. Railsback, R. Maia, R. Dowsley, D. Melanson, A. Nascimento, M. De Cock <em>Training Differentially Private Models with Secure Multiparty Computation</em> (<a href="https://arxiv.org/abs/2202.02625">arXiv</a>)</li>
 												
 
@@ -125,8 +127,8 @@
 												<h3>Abstracts & Extended Abstracts</h3>
 											</header>
 											<ul>
-												<li><strong>S. Pentyala</strong>, Nicola Neophytou, Anderson Nascimento, Martine De Cock, Golnoosh Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em>, Montreal AI Symposium 2022 <a href="docs/mais.pdf">Poster</a> </li>
-                                                                                                <li><strong>S. Pentyala</strong>, Nicola Neophytou, Anderson Nascimento, Martine De Cock, Golnoosh Farnadi <em>Towards Private and Fair Federated Learning </em>, Women in Machine Learning (WiML) workshop at NeurIPS2022</li>
+												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em>, Montreal AI Symposium 2022 <a href="docs/mais.pdf">Poster</a> </li>
+                                                                                                <li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Towards Private and Fair Federated Learning </em>, Women in Machine Learning (WiML) workshop at NeurIPS2022</li>
 
 												
 
