--- a/index.html
+++ b/index.html
@@ -99,19 +99,20 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
+																								<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
+
 												<li><strong>S. Pentyala</strong>, R. Dowsley and M. De Cock <em>Privacy-Preserving Video Classification with Convolutional Neural Networks</em>, In Proceedings of the 38th International Conference on Machine Learning, PMLR 139, 2021. (<a href="http://proceedings.mlr.press/v139/pentyala21a.html">HTML</a>, <a href="docs/ICML_POSTER.pdf">Poster</a>, <a href="https://icml.cc/virtual/2021/poster/10097">Talk</a>)</li>
 												<li>F. Tabet and <strong>S. Pentyala</strong>, B. Patel, et al. <em>OSMRunner: A System for Exploring and Fixing OSM Connectivity</em>, 22nd IEEE International Conference on Mobile Data Management (MDM) 2021. (<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9474847&casa_token=n_teLdyk63EAAAAA:V_EKfsxE5cPnvZocqAdyz5ZVOkYq3DA_TD_hzr9i2Rnr1qhbQ5MkJAALDk5TGrg9DWlBj5No5g&tag=1">HTML</a>, <a href="https://www.youtube.com/embed/Xk5geWAk2sQ?autoplay=1">Talk</a>)</li>
-												
+				
 
 											</ul>
 									<header class="major">
 												<h3>Papers in Workshops</h3>
 											</header>
 											<ul>
-												<li><strong>S. Pentyala</strong>, D. Melanson, M. De Cock, G. Farnadi <em>PrivFair: a Library for Privacy-Preserving Fairness Auditing</em>, AAAI-22 Workshop on Privacy-Preserving Artificial Intelligence, 2022. (<a href="https://arxiv.org/abs/2202.04058">arXiv</a>, <a href="https://aaai-ppai22.github.io/files/24.pdf">PDF</a>, <a href="https://web.ecs.syr.edu/~ffiorett/cfp/PPAI22/24.mp4">Talk</a>)</li>
+														<li>M. Pereira, <strong>S. Pentyala</strong>, A. Nascimento, R. T. de Sousa Jr., M. De Cock <em>Secure Multiparty Computation for Synthetic Data Generation from Distributed Data</em> , SyntheticData4ML Workshop, NeurIPS, 2022. (<a href="https://arxiv.org/abs/2210.07332">arXiv</a>)</li>
+										<li><strong>S. Pentyala</strong>, D. Melanson, M. De Cock, G. Farnadi <em>PrivFair: a Library for Privacy-Preserving Fairness Auditing</em>, AAAI-22 Workshop on Privacy-Preserving Artificial Intelligence, 2022. (<a href="https://arxiv.org/abs/2202.04058">arXiv</a>, <a href="https://aaai-ppai22.github.io/files/24.pdf">PDF</a>, <a href="https://web.ecs.syr.edu/~ffiorett/cfp/PPAI22/24.mp4">Talk</a>)</li>
 												<li><strong>S. Pentyala</strong>, M. De Cock and R. Dowsley <em>Privacy-Preserving Video Classification</em>, Women in Computer Vision Workshop at CVPR, 2021. (<a href="docs/WicCV21_13-poster.pdf">Poster</a>)</li>
-												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>PrivFairFL: Privacy-Preserving Group Fairness in Federated Learning</em> , Algorithmic Fairness through the Lens of Causality and Privacy Workshop, NeurIPS, 2022. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
-												<li>M. Pereira, <strong>S. Pentyala</strong>, A. Nascimento, R. T. de Sousa Jr., M. De Cock <em>Secure Multiparty Computation for Synthetic Data Generation from Distributed Data</em> , SyntheticData4ML Workshop, NeurIPS, 2022. (<a href="https://arxiv.org/abs/2210.07332">arXiv</a>)</li>
 
 											</ul>
 									<header class="major">
@@ -162,6 +163,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li> Roundtable Lead on Privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022 </li>
 	<li>Co-Reviewer for NeurIPS 2022</li>
 	<li>Reviewer for SyntheticData4ML Workshop@NeurIPS 2022 </li>
 	
@@ -185,6 +187,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li><strong>Nov 2022</strong> : Join our roundtable discussion on privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022</a></li>
 	<li><strong>Sep 2022</strong> : Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</a></li>
 	<li><strong>Sep 2022</strong> : Recipient of WiML travel funding award</a></li>
 	<li><strong>May 2022</strong> : <a href="https://www.tacoma.uw.edu/set/awards">Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</a></li>
