--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
-																								<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
+												<li>, J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023.</li>
+
+												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
 
 												<li><strong>S. Pentyala</strong>, R. Dowsley and M. De Cock <em>Privacy-Preserving Video Classification with Convolutional Neural Networks</em>, In Proceedings of the 38th International Conference on Machine Learning, PMLR 139, 2021. (<a href="http://proceedings.mlr.press/v139/pentyala21a.html">HTML</a>, <a href="docs/ICML_POSTER.pdf">Poster</a>, <a href="https://icml.cc/virtual/2021/poster/10097">Talk</a>)</li>
 												<li>F. Tabet and <strong>S. Pentyala</strong>, B. Patel, et al. <em>OSMRunner: A System for Exploring and Fixing OSM Connectivity</em>, 22nd IEEE International Conference on Mobile Data Management (MDM) 2021. (<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9474847&casa_token=n_teLdyk63EAAAAA:V_EKfsxE5cPnvZocqAdyz5ZVOkYq3DA_TD_hzr9i2Rnr1qhbQ5MkJAALDk5TGrg9DWlBj5No5g&tag=1">HTML</a>, <a href="https://www.youtube.com/embed/Xk5geWAk2sQ?autoplay=1">Talk</a>)</li>
@@ -110,7 +112,7 @@
 												<h3>Papers in Workshops</h3>
 											</header>
 											<ul>
-														<li>M. Pereira, <strong>S. Pentyala</strong>, A. Nascimento, R. T. de Sousa Jr., M. De Cock <em>Secure Multiparty Computation for Synthetic Data Generation from Distributed Data</em> , SyntheticData4ML Workshop, NeurIPS, 2022. (<a href="https://arxiv.org/abs/2210.07332">arXiv</a>)</li>
+														<li>M. Pereira, <strong>S. Pentyala</strong>, A. Nascimento, R. T. de Sousa Jr., M. De Cock <em>Secure Multiparty Computation for Synthetic Data Generation from Distributed Data</em> , SyntheticData4ML Workshop, NeurIPS, 2022. (<a href="https://neurips.cc/media/PosterPDFs/NeurIPS%202022/58660.png?t=1668155736.5769007">Poster</a>, <a href="https://openreview.net/forum?id=hpaVCT1Cx7p">PDF</a>,<a href="https://neurips.cc/virtual/2022/58660">Talk</a>)</li>
 										<li><strong>S. Pentyala</strong>, D. Melanson, M. De Cock, G. Farnadi <em>PrivFair: a Library for Privacy-Preserving Fairness Auditing</em>, AAAI-22 Workshop on Privacy-Preserving Artificial Intelligence, 2022. (<a href="https://arxiv.org/abs/2202.04058">arXiv</a>, <a href="https://aaai-ppai22.github.io/files/24.pdf">PDF</a>, <a href="https://web.ecs.syr.edu/~ffiorett/cfp/PPAI22/24.mp4">Talk</a>)</li>
 												<li><strong>S. Pentyala</strong>, M. De Cock and R. Dowsley <em>Privacy-Preserving Video Classification</em>, Women in Computer Vision Workshop at CVPR, 2021. (<a href="docs/WicCV21_13-poster.pdf">Poster</a>)</li>
 
