--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
-												<li>, J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023.</li>
+												<li>J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023.</li>
 
 												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
 
@@ -153,6 +153,28 @@
 										</article>
                                 </div>
                                 </section> 
+
+	<!-- Section -->
+								<section>
+								<div id="about">
+									<header class="major">
+										<h2>Teaching</h2>
+									</header>
+									<div class="features">
+										<article>
+											<!-- <span class="icon fa-gem"></span> -->
+											<div class="content">
+<ul>
+	<li>Pre-doctoral Instructor for TCSS 143 (Fundamentals of Object-Oriented Programming)</li>
+
+	
+												
+
+											</ul>
+									</div>
+										</article>
+                                </div>
+                                </section> 									
 									
 	<!-- Section -->
 								<section>
