--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 												<h3>Awards</h3>
 											</header>
 											<ul>
+												<a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges
 												<li>WiML travel award to present work on <a href="https://arxiv.org/abs/2205.11584">private and fair federated learning</a> at WiML@NeurIPS 2022</li>
 												<li>Carwein-Andrews Endowment award for 2022-2023</li>
 												<li>2021-2022 School of Engineering & Technology’s Outstanding Graduate Research Award, Univeristy of Washington Tacoma. (<a href="docs/OSRAward.png">CERT</a>)</li>
@@ -212,8 +213,9 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
-	<li><strong>Nov 2022</strong> : Join our roundtable discussion on privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022</a></li>
-	<li><strong>Sep 2022</strong> : Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</a></li>
+	<li><strong>Mar 2023</strong> : <a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges </a></li>
+	<li><strong>Nov 2022</strong> : Join our roundtable discussion on privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022</li>
+	<li><strong>Sep 2022</strong> : Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</li>
 	<li><strong>Sep 2022</strong> : Recipient of WiML travel funding award</a></li>
 	<li><strong>May 2022</strong> : <a href="https://www.tacoma.uw.edu/set/awards">Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</a></li>
 												
