--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
                                                 <p>I am a third year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. 
-						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a> and will intern at JPMorgan Chase in summer 2023. </p>
-                                                <p>I am broadly interested in Trustworthy Machine Learning. Currently, my research focuses on privacy-preserving machine learning and fairness in machine learning.</p>
+						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a> and will intern at JPMorgan Chase in summer 2023.
+                                                I am broadly interested in Trustworthy Machine Learning. Currently, my research focuses on privacy-preserving machine learning and fairness in machine learning.</p>
                                                 <p>I earned my Masters in Computer Science & Systems from University of Washington Tacoma in 2020 with a thesis on privacy-preserving video classification that was nominated for the UW Distinguished Thesis award. I then briefly worked as a Research Intern at <a href="https://mila.quebec/en/">MILA</a> under the supervision of <a href="https://gfarnadi.github.io/">Dr. Golnoosh Farnadi.</a> 
 						Prior to starting at UW Tacoma, I spent a few years in the Nuclear Power Generation industry as an IT administrator after receiving my Bachelors from <a href="https://www.jntua.ac.in/">JawaharLal Nehru Technological University Anantapur</a> in 2009. </p>
                                                 <p>When I am not working, I love to play with my 3 year old daughter. I love dancing and like watching movies of different genres.</p>
@@ -100,6 +100,8 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
+												<li>S. Golob, <strong>S. Pentyala</strong>, R. Dowsley, B. David, M. Larangeira, M. De Cock, A. Nascimento <em>A Decentralized Information Marketplace Preserving Input and Output Privacy</em> , Proceedings of the 2nd Data Economy Workshop (DEC23) - SIGMOD 2023 workshop, 2023.</li>
+
 												<li>J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023.</li>
 
 												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
@@ -141,7 +143,7 @@
 												<h3>Awards</h3>
 											</header>
 											<ul>
-												<a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges
+												<li><a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges
 												<li>WiML travel award to present work on <a href="https://arxiv.org/abs/2205.11584">private and fair federated learning</a> at WiML@NeurIPS 2022</li>
 												<li>Carwein-Andrews Endowment award for 2022-2023</li>
 												<li>2021-2022 School of Engineering & Technology’s Outstanding Graduate Research Award, Univeristy of Washington Tacoma. (<a href="docs/OSRAward.png">CERT</a>)</li>
@@ -167,7 +169,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
-	<li>Pre-doctoral Instructor for TCSS 143 (Fundamentals of Object-Oriented Programming)</li>
+	<li>Pre-doctoral Instructor for TCSS 143 (Fundamentals of Object-Oriented Programming) - Winer 2023, Spring 2023</li>
 
 	
 												
