--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 											<ul>
 												<li>S. Golob, <strong>S. Pentyala</strong>, R. Dowsley, B. David, M. Larangeira, M. De Cock, A. Nascimento <em>A Decentralized Information Marketplace Preserving Input and Output Privacy</em> , Proceedings of the 2nd Data Economy Workshop (DEC23) - SIGMOD 2023 workshop, 2023.</li>
 
-												<li>J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023.</li>
+												<li>J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023. (<a href="https://link.springer.com/chapter/10.1007/978-3-031-28238-6_13">Paper</a> )</li> 
 
 												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
 
