--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 												<h3>Awards</h3>
 											</header>
 											<ul>
+												<li>2023 Andrew and Julie Fry Innovation Award, UW Tacoma</li>
+    												<li>2022-2023 School of Engineering \& Technology’s Student Justice Equity Diversity \& Inclusion Award, UW Tacoma</li>
+    												<li>2022-2023 School of Engineering \& Technology’s Outstanding Graduate Research Award, UW Tacoma </li>
 												<li><a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges
 												<li>WiML travel award to present work on <a href="https://arxiv.org/abs/2205.11584">private and fair federated learning</a> at WiML@NeurIPS 2022</li>
 												<li>Carwein-Andrews Endowment award for 2022-2023</li>
@@ -215,6 +218,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li><strong>Apr 2023</strong> : Recipent of Outstanding Research Award, JEDI Award and Andrew and Fry Innovation Award, UW Tacoma </a></li>
 	<li><strong>Mar 2023</strong> : <a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges </a></li>
 	<li><strong>Nov 2022</strong> : Join our roundtable discussion on privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022</li>
 	<li><strong>Sep 2022</strong> : Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</li>
