--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li> Reviewer for IEEE Transactions on Dependable and Secure Computing </li>
 	<li> Roundtable Lead on Privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022 </li>
 	<li>Co-Reviewer for NeurIPS 2022</li>
 	<li>Reviewer for SyntheticData4ML Workshop@NeurIPS 2022 </li>
