--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
                                                 <p>I am a third year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. 
-						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a> and will intern at JPMorgan Chase in summer 2023.
+						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a>. I had an opportunity to intern at JPMorgan as an AI Research Associate in Summer 2023.
                                                 I am broadly interested in Trustworthy Machine Learning. Currently, my research focuses on privacy-preserving machine learning and fairness in machine learning.</p>
                                                 <p>I earned my Masters in Computer Science & Systems from University of Washington Tacoma in 2020 with a thesis on privacy-preserving video classification that was nominated for the UW Distinguished Thesis award. I then briefly worked as a Research Intern at <a href="https://mila.quebec/en/">MILA</a> under the supervision of <a href="https://gfarnadi.github.io/">Dr. Golnoosh Farnadi.</a> 
 						Prior to starting at UW Tacoma, I spent a few years in the Nuclear Power Generation industry as an IT administrator after receiving my Bachelors from <a href="https://www.jntua.ac.in/">JawaharLal Nehru Technological University Anantapur</a> in 2009. </p>
@@ -144,8 +144,8 @@
 											</header>
 											<ul>
 												<li>2023 Andrew and Julie Fry Innovation Award, UW Tacoma</li>
-    												<li>2022-2023 School of Engineering \& Technology’s Student Justice Equity Diversity \& Inclusion Award, UW Tacoma</li>
-    												<li>2022-2023 School of Engineering \& Technology’s Outstanding Graduate Research Award, UW Tacoma </li>
+    												<li>2022-2023 School of Engineering & Technology’s Student Justice Equity Diversity & Inclusion Award, UW Tacoma</li>
+    												<li>2022-2023 School of Engineering & Technology’s Outstanding Graduate Research Award, UW Tacoma </li>
 												<li><a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges
 												<li>WiML travel award to present work on <a href="https://arxiv.org/abs/2205.11584">private and fair federated learning</a> at WiML@NeurIPS 2022</li>
 												<li>Carwein-Andrews Endowment award for 2022-2023</li>
@@ -194,10 +194,11 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li> Reviewer for IEEE Transactions on Neural Networks and Learning Systems </li>
 	<li> Reviewer for IEEE Transactions on Dependable and Secure Computing </li>
 	<li> Roundtable Lead on Privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022 </li>
-	<li>Co-Reviewer for NeurIPS 2022</li>
-	<li>Reviewer for SyntheticData4ML Workshop@NeurIPS 2022 </li>
+	<li> Co-Reviewer for NeurIPS 2022</li>
+	<li> Reviewer for SyntheticData4ML Workshop@NeurIPS 2022 </li>
 	
 												
 
@@ -219,12 +220,13 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
-	<li><strong>Apr 2023</strong> : Recipent of Outstanding Research Award, JEDI Award and Andrew and Fry Innovation Award, UW Tacoma </a></li>
-	<li><strong>Mar 2023</strong> : <a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges </a></li>
-	<li><strong>Nov 2022</strong> : Join our roundtable discussion on privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022</li>
-	<li><strong>Sep 2022</strong> : Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</li>
-	<li><strong>Sep 2022</strong> : Recipient of WiML travel funding award</a></li>
-	<li><strong>May 2022</strong> : <a href="https://www.tacoma.uw.edu/set/awards">Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</a></li>
+	<li><strong>Jun 2023</strong>: Recipent of <a href="https://www.jpmorgan.com/technology/artificial-intelligence/research-awards/phd-fellowship-2023">2023 JP Morgan Chase Fellowship to support PhD research on synthetic data generation</a></li>
+	<li><strong>Apr 2023</strong>: Recipent of Outstanding Research Award, JEDI Award and Andrew and Fry Innovation Award, UW Tacoma </a></li>
+	<li><strong>Mar 2023</strong>: <a href="https://drivendata.co/blog/federated-learning-pets-prize-winners-phases-2-3">Our Team PPMLHuskies won 2nd award in the U.S-U.K. PETs Prize Challenges </a></li>
+	<li><strong>Nov 2022</strong>: Join our roundtable discussion on privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022</li>
+	<li><strong>Sep 2022</strong>: Recipient of Carwein-Andrews Endowment award for 2022-2023, University of Washington Tacoma, School of Engineering and Technology</li>
+	<li><strong>Sep 2022</strong>: Recipient of WiML travel funding award</a></li>
+	<li><strong>May 2022</strong>: <a href="https://www.tacoma.uw.edu/set/awards">Recipient of Outstanding Graduate Research Award, University of Washington Tacoma</a></li>
 												
 
 											</ul>
