--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
                                                 <p>I am a third year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. 
-						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a> and will intern at JPMorgan Chase in summer 2023.
+						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a>.
                                                 I am broadly interested in Trustworthy Machine Learning. Currently, my research focuses on privacy-preserving machine learning and fairness in machine learning.</p>
-                                                <p>I earned my Masters in Computer Science & Systems from University of Washington Tacoma in 2020 with a thesis on privacy-preserving video classification that was nominated for the UW Distinguished Thesis award. I then briefly worked as a Research Intern at <a href="https://mila.quebec/en/">MILA</a> under the supervision of <a href="https://gfarnadi.github.io/">Dr. Golnoosh Farnadi.</a> 
+                                                
+							<p>I earned my Masters in Computer Science & Systems from University of Washington Tacoma in 2020 with a thesis on privacy-preserving video classification that was nominated for the UW Distinguished Thesis award. I then briefly worked as a Research Intern at <a href="https://mila.quebec/en/">MILA</a> under the supervision of <a href="https://gfarnadi.github.io/">Dr. Golnoosh Farnadi.</a>
+						I interned at JPMorgan Chase as an AI Research Associate in Summer 2023 and have been awarded <a href="https://www.jpmorgan.com/technology/artificial-intelligence/research-awards/phd-fellowship-2023">2023 JP Morgan Chase Fellowship</a> to support PhD research on synthetic data generation. 
 						Prior to starting at UW Tacoma, I spent a few years in the Nuclear Power Generation industry as an IT administrator after receiving my Bachelors from <a href="https://www.jntua.ac.in/">JawaharLal Nehru Technological University Anantapur</a> in 2009. </p>
-                                                <p>When I am not working, I love to play with my 3 year old daughter. I love dancing and like watching movies of different genres.</p>
+                                                <p>When I am not working, I love to play with my 4 year old daughter. I love dancing and like watching movies of different genres.</p>
 									</div>
 										</article>
                                 </div>
@@ -143,7 +145,7 @@
 												<h3>Awards</h3>
 											</header>
 											<ul>
-												<li>Recipient of 2023 JP Morgan Chase Fellowship to support PhD research on synthetic data generation</li>
+												<li>Recipient of <a href="https://www.jpmorgan.com/technology/artificial-intelligence/research-awards/phd-fellowship-2023">2023 JP Morgan Chase Fellowship</a> to support PhD research on synthetic data generation</li>
 												<li>2023 Andrew and Julie Fry Innovation Award, UW Tacoma</li>
     												<li>2022-2023 School of Engineering & Technology’s Student Justice Equity Diversity & Inclusion Award, UW Tacoma</li>
     												<li>2022-2023 School of Engineering & Technology’s Outstanding Graduate Research Award, UW Tacoma </li>
