--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li> Invited talk on 2023 WiDS celebration at UW Tacoma</li>
 	<li> Reviewer for IEEE Transactions on Neural Networks and Learning Systems </li>
 	<li> Reviewer for IEEE Transactions on Dependable and Secure Computing </li>
 	<li> Roundtable Lead on Privacy at the Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) Workshop, NeurIPS 2022 </li>
