--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<article>
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
-                                                <p>I am a third year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. 
+                                                <p>I am a fourth year PhD student advised by <a href="http://faculty.washington.edu/mdecock/">Dr. Martine De Cock</a> and <a href="http://www.anderson-nascimento.org/">Dr. Anderson Nascimento</a> in the School of Engineering and Technology at the <a href="https://www.tacoma.uw.edu/">University of Washington Tacoma</a>. 
 						I am a Graduate Research Assistant in the <a href="http://faculty.washington.edu/mdecock/ppml/">Privacy-Preserving Machine learning group</a>.
                                                 I am broadly interested in Trustworthy Machine Learning. Currently, my research focuses on privacy-preserving machine learning and fairness in machine learning.</p>
                                                 
