--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 												<h3>Papers in Workshops</h3>
 											</header>
 											<ul>
+												<li><strong>S. Pentyala</strong>, S. Sharma, S. Kariyappa, F. Leuce and D. Magazzeni <em>Privacy-Preserving Algorithmic Recourse</em>, 3rd International Workshop on Explainable AI in Finance, ICAIF 2023.</li>
 														<li>M. Pereira, <strong>S. Pentyala</strong>, A. Nascimento, R. T. de Sousa Jr., M. De Cock <em>Secure Multiparty Computation for Synthetic Data Generation from Distributed Data</em> , SyntheticData4ML Workshop, NeurIPS, 2022. (<a href="https://neurips.cc/media/PosterPDFs/NeurIPS%202022/58660.png?t=1668155736.5769007">Poster</a>, <a href="https://openreview.net/forum?id=hpaVCT1Cx7p">PDF</a>,<a href="https://neurips.cc/virtual/2022/58660">Talk</a>)</li>
 										<li><strong>S. Pentyala</strong>, D. Melanson, M. De Cock, G. Farnadi <em>PrivFair: a Library for Privacy-Preserving Fairness Auditing</em>, AAAI-22 Workshop on Privacy-Preserving Artificial Intelligence, 2022. (<a href="https://arxiv.org/abs/2202.04058">arXiv</a>, <a href="https://aaai-ppai22.github.io/files/24.pdf">PDF</a>, <a href="https://web.ecs.syr.edu/~ffiorett/cfp/PPAI22/24.mp4">Talk</a>)</li>
 												<li><strong>S. Pentyala</strong>, M. De Cock and R. Dowsley <em>Privacy-Preserving Video Classification</em>, Women in Computer Vision Workshop at CVPR, 2021. (<a href="docs/WicCV21_13-poster.pdf">Poster</a>)</li>
