--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
+	<li> Reviewer for SyntheticData4ML Workshop@NeurIPS 2022 </li>
 	<li> Invited talk on 2023 WiDS celebration at UW Tacoma</li>
 	<li> Reviewer for IEEE Transactions on Neural Networks and Learning Systems </li>
 	<li> Reviewer for IEEE Transactions on Dependable and Secure Computing </li>
