--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
-	<li>Pre-doctoral Instructor for TCSS 143 (Fundamentals of Object-Oriented Programming) - Winer 2023, Spring 2023</li>
+	<li>Spring 2023: Pre-doctoral Instructor for TCSS 143 (Fundamentals of Object-Oriented Programming)</li>
+	<li>Winter 2023: Pre-doctoral Instructor for TCSS 143 (Fundamentals of Object-Oriented Programming)</li>
 
 	
 												
@@ -198,7 +199,7 @@
 											<!-- <span class="icon fa-gem"></span> -->
 											<div class="content">
 <ul>
-	<li> Reviewer for SyntheticData4ML Workshop@NeurIPS 2022 </li>
+	<li> Reviewer for SyntheticData4ML Workshop@NeurIPS 2023 </li>
 	<li> Invited talk on 2023 WiDS celebration at UW Tacoma</li>
 	<li> Reviewer for IEEE Transactions on Neural Networks and Learning Systems </li>
 	<li> Reviewer for IEEE Transactions on Dependable and Secure Computing </li>
