--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
-												<li><strong>S. Pentyala</strong>strong>, M. Pereira, & M. De Cock (2024). <em>CaPS: Collaborative and Private Synthetic Data Generation from Distributed Sources</em>, To appear in: Proceedings of the 41st International Conference on Machine Learning, 2024.</li>
+												<li><strong>S. Pentyala</strong>, M. Pereira, & M. De Cock (2024). <em>CaPS: Collaborative and Private Synthetic Data Generation from Distributed Sources</em>, To appear in: Proceedings of the 41st International Conference on Machine Learning, 2024.</li>
 												<li>S. Golob, <strong>S. Pentyala</strong>, R. Dowsley, B. David, M. Larangeira, M. De Cock, A. Nascimento <em>A Decentralized Information Marketplace Preserving Input and Output Privacy</em> , Proceedings of the 2nd Data Economy Workshop (DEC23) - SIGMOD 2023 workshop, 2023.</li>
 
 												<li>J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023. (<a href="https://link.springer.com/chapter/10.1007/978-3-031-28238-6_13">Paper</a> )</li> 
