--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-        <iframe src="docs/Resume_Sikha_P.pdf" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0%;left:0px;right:0px;bottom:0px" height="100%" width="100%"> <!-- width="100%" height="100%"> -->
+        <iframe src="docs/cv_24.pdf" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0%;left:0px;right:0px;bottom:0px" height="100%" width="100%"> <!-- width="100%" height="100%"> -->
 		</iframe>
 		
 		
