--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
+												<li>S. Golob, <strong>S. Pentyala</strong>, A. Maratkhan, M. De Cock. <em> Privacy Vulnerabilities in Marginals-based Synthetic Data </em>, IEEE Secure and Trustworthy Machine Learning Conference , 2025.</li>
 												<li><strong>S. Pentyala</strong>, M. Pereira, & M. De Cock (2024). <em>CaPS: Collaborative and Private Synthetic Data Generation from Distributed Sources</em>, Proceedings of the 41st International Conference on Machine Learning, 2024.</li>
 												<li>S. Golob, <strong>S. Pentyala</strong>, R. Dowsley, B. David, M. Larangeira, M. De Cock, A. Nascimento <em>A Decentralized Information Marketplace Preserving Input and Output Privacy</em> , Proceedings of the 2nd Data Economy Workshop (DEC23) - SIGMOD 2023 workshop, 2023.</li>
 
@@ -127,6 +128,7 @@
 												<h3>Papers in Workshops</h3>
 											</header>
 											<ul>
+												<li><strong>S. Pentyala</strong>, G. Sitaraman, T. Claar, M. De Cock. <em>End to End Collaborative Synthetic Data Generation</em>, AAAI-25 Workshop on Privacy-Preserving Artificial Intelligence, 2025</li>
 												<li>T. Claar, S. Golob, <strong>S. Pentyala</strong>, G. Sitaraman, M. De Cock, J. Banerjee, L. Foschini. <em>Securely Generating Synthetic Genomic Data from Distributed Data Silos</em>, 11th International Workshop on Genome Privacy and Security (GenoPri'24), 2024</li>
 												<li>S. Golob, <strong>S. Pentyala</strong>, A. Maratkhan, M. De Cock <em>High Epsilon Synthetic Data Vulnerabilities in MST and PrivBayes</em> AAAI-24 Workshop on Privacy-Preserving Artificial Intelligence, 2024.</li>
 
