--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
 												<h3>Papers in Proceedings</h3>
 											</header>
 											<ul>
-												<li>S. Golob, <strong>S. Pentyala</strong>, A. Maratkhan, M. De Cock. <em> Privacy Vulnerabilities in Marginals-based Synthetic Data </em>, IEEE Secure and Trustworthy Machine Learning Conference , 2025.</li>
-												<li><strong>S. Pentyala</strong>, M. Pereira, & M. De Cock (2024). <em>CaPS: Collaborative and Private Synthetic Data Generation from Distributed Sources</em>, Proceedings of the 41st International Conference on Machine Learning, 2024.</li>
-												<li>S. Golob, <strong>S. Pentyala</strong>, R. Dowsley, B. David, M. Larangeira, M. De Cock, A. Nascimento <em>A Decentralized Information Marketplace Preserving Input and Output Privacy</em> , Proceedings of the 2nd Data Economy Workshop (DEC23) - SIGMOD 2023 workshop, 2023.</li>
+												<li>S. Golob, <strong>S. Pentyala</strong>, A. Maratkhan, M. De Cock. <em> Privacy Vulnerabilities in Marginals-based Synthetic Data </em>, IEEE Secure and Trustworthy Machine Learning Conference , 2025.(<a href="https://arxiv.org/pdf/2410.05506">Paper</a>) </li>
+												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , Proceedings of Machine Learning Research (PMLR), 2025. (<a href="https://arxiv.org/pdf/2205.11584">Paper</a>)</li>
+												<li><strong>S. Pentyala</strong>, M. Pereira, & M. De Cock (2024). <em>CaPS: Collaborative and Private Synthetic Data Generation from Distributed Sources</em>, Proceedings of the 41st International Conference on Machine Learning, 2024. (<a href="https://dl.acm.org/doi/10.5555/3692070.3693709">Paper</a>)</li> 
+												<li>S. Golob, <strong>S. Pentyala</strong>, R. Dowsley, B. David, M. Larangeira, M. De Cock, A. Nascimento <em>A Decentralized Information Marketplace Preserving Input and Output Privacy</em> , Proceedings of the 2nd Data Economy Workshop (DEC23) - SIGMOD 2023 workshop, 2023.(<a href="https://dl.acm.org/doi/abs/10.1145/3600046.3600047">Paper</a>)</li>
 
 												<li>J. Sun, <strong>S. Pentyala</strong>, M. De Cock, G. Farnadi <em>Privacy-Preserving Fair Item Ranking</em> , 45th European Conference on Information Retrieval 2023. (<a href="https://link.springer.com/chapter/10.1007/978-3-031-28238-6_13">Paper</a> )</li> 
 
-												<li><strong>S. Pentyala</strong>, N. Neophytou, A. Nascimento, M. De Cock, G. Farnadi <em>Privacy-Preserving Group Fairness in Cross-Device Federated Learning</em> , In Proceedings of Algorithmic Fairness through the Lens of Causality and Privacy (AFCP2022) - NeurIPS 2022 workshop. (<a href="https://arxiv.org/abs/2205.11584">arXiv</a>)</li>
+												
 
 												<li><strong>S. Pentyala</strong>, R. Dowsley and M. De Cock <em>Privacy-Preserving Video Classification with Convolutional Neural Networks</em>, In Proceedings of the 38th International Conference on Machine Learning, PMLR 139, 2021. (<a href="http://proceedings.mlr.press/v139/pentyala21a.html">HTML</a>, <a href="docs/ICML_POSTER.pdf">Poster</a>, <a href="https://icml.cc/virtual/2021/poster/10097">Talk</a>)</li>
 												<li>F. Tabet and <strong>S. Pentyala</strong>, B. Patel, et al. <em>OSMRunner: A System for Exploring and Fixing OSM Connectivity</em>, 22nd IEEE International Conference on Mobile Data Management (MDM) 2021. (<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9474847&casa_token=n_teLdyk63EAAAAA:V_EKfsxE5cPnvZocqAdyz5ZVOkYq3DA_TD_hzr9i2Rnr1qhbQ5MkJAALDk5TGrg9DWlBj5No5g&tag=1">HTML</a>, <a href="https://www.youtube.com/embed/Xk5geWAk2sQ?autoplay=1">Talk</a>)</li>
@@ -120,8 +121,8 @@
 												<h3>Papers in Journals</h3>
 											</header>
 											<ul>
-												<li>R.J.M. Maia, D. Ray, <strong>S. Pentyala</strong>, R. Dowsley, M. De Cock, A. Nascimento and R. Jacobi. ,<em>An End-to-End Framework for Private DGA Detection as a Service</em>, To appear in PLOS ONE 2024.</li>
-												<li>J. Vos, <strong>S. Pentyala</strong> et al. <em>Privacy-Preserving Membership Queries for Federated Anomaly Detection</em>, To appear in: PoPETS 2024(3), 2024</li>
+												<li>R.J.M. Maia, D. Ray, <strong>S. Pentyala</strong>, R. Dowsley, M. De Cock, A. Nascimento and R. Jacobi. ,<em>An End-to-End Framework for Private DGA Detection as a Service</em>, PLOS ONE 2024.</li>
+												<li>J. Vos, <strong>S. Pentyala</strong> et al. <em>Privacy-Preserving Membership Queries for Federated Anomaly Detection</em>, PoPETS 2024(3), 2024</li>
 
 											</ul>
 									<header class="major">
